--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
         <title>CondiPES by Pablo.</title>
     </head>
     
