--- a/index.html
+++ b/index.html
@@ -3,23 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/style.css">
-        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
         <title>CondiPES by Pablo.</title>
     </head>
-    
 <body>
-
-    <h1></h1>
-    <h2></h2>
     <div id="tbl"></div>
-    
     <div id="btn"></div>
-
-
-
-
-
-<script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
